--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Home</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width" />
-    <!--
-      Need a visual blank slate?
-      Remove all code in `styles.css`!
-    -->
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
-  </head>
-  <body>
-    <nav>
-      <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
-    </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recipe Homepage</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Delicious Recipes</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="recipes.html">Recipes</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
+
     <main>
-      <h1>Home page</h1>
+        <section class="featured-recipes">
+            <h2>Featured Recipes</h2>
+            <div class="recipe-card">
+                <img src="pic/Spaghetti Carbonara.png" alt="Spaghetti Carbonara" class="recipe-image">
+                <div class="recipe-details">
+                    <h3><a href="recipe-detail.html">Spaghetti Carbonara</a></h3>
+                    <p>A classic Italian pasta dish with creamy sauce and crispy pancetta.</p>
+                </div>
+            </div>
+        </section>
     </main>
-  </body>
+
+    <script src="script.js"></script>
+</body>
 </html>
