--- a/index.html
+++ b/index.html
@@ -22,10 +22,27 @@
             <div class="recipe-card">
                 <img src="pic/Spaghetti Carbonara.png" alt="Spaghetti Carbonara" class="recipe-image">
                 <div class="recipe-details">
-                    <h3><a href="recipe-detail.html">Spaghetti Carbonara</a></h3>
-                    <p>A classic Italian pasta dish with creamy sauce and crispy pancetta.</p>
+                  <h3><a href="recipe-Spaghetti Carbonara.html">Spaghetti Carbonara</a></h3>
+                  <p>A classic Italian pasta dish with creamy sauce and crispy pancetta.</p>
+                </div>
+              </div>
+
+            <div class="recipe-card">
+                <img src="pic/Nacho Cheese Beef Wrap.png" alt="Nacho Cheese Beef Wrap" class="recipe-image">
+                <div class="recipe-details">
+                    <h3><a href="recipe-Nacho Cheese Beef Wrap.html">Nacho Cheese Beef Wrap</a></h3>
+                    <p>A Tex-Mex favorite, featuring seasoned beef, melty nacho cheese, crunchy tortilla chips, and fresh toppings, all wrapped in a soft tortilla.</p>
                 </div>
             </div>
+
+            <div class="recipe-card">
+                <img src="pic/Tiramisu.jpg" alt="Tiramisu" class="recipe-image">
+                <div class="recipe-details">
+                    <h3><a href="recipe-Tiramisu.html">Tiramisu</a></h3>
+                    <p>A luxurious Italian dessert with layers of mascarpone, coffee-soaked ladyfingers, and a dusting of cocoa.</p>
+                </div>
+            </div>
+
         </section>
     </main>
 
