--- a/recipe-Spaghetti Carbonara.html
+++ b/recipe-Spaghetti Carbonara.html
@@ -44,9 +44,10 @@
 
             <form id="comment-form">
                 <label for="comment-input">Add a comment:</label>
-                <textarea id="comment-input" required></textarea>
-                <button type="submit">Post Comment</button>
+                <textarea id="comment-input" rows="4" class="input-style" required></textarea>
+                <button type="submit" class="button">Post Comment</button>
             </form>
+            
         </section>
     </main>
 
