--- a/recipes.html
+++ b/recipes.html
@@ -17,16 +17,82 @@
     </header>
 
     <main>
-        <section class="featured-recipes">
-            <h2>Featured Recipes</h2>
-            <div class="recipe-card">
+        <!-- Filter Section -->
+        <section class="filter-section">
+            <h2>Filter Recipes</h2>
+            <label for="category-select">Choose a category:</label>
+            <select id="category-select">
+                <option value="all">All</option>
+                <option value="main-dish">Main Dish</option>
+                <option value="dessert">Dessert</option>
+                <option value="western-cuisine">Western Cuisine</option>
+                <option value="chinese-cuisine">Chinese Cuisine</option>
+            </select>
+        </section>
+
+        <!-- Recipes Section -->
+        <section class="featured-recipes" id="recipe-list">
+            <h2>All Recipes</h2>
+            <div class="recipe-card" data-category="main-dish western-cuisine">
                 <img src="pic/Spaghetti Carbonara.png" alt="Spaghetti Carbonara" class="recipe-image">
                 <div class="recipe-details">
-                    <h3><a href="recipe-detail.html">Spaghetti Carbonara</a></h3>
+                    <h3><a href="recipe-Spaghetti Carbonara.html">Spaghetti Carbonara</a></h3>
                     <p>A classic Italian pasta dish with creamy sauce and crispy pancetta.</p>
+                </div>
+            </div>
+
+            <div class="recipe-card" data-category="main-dish western-cuisine">
+                <img src="pic/Nacho Cheese Beef Wrap.png" alt="Nacho Cheese Beef Wrap" class="recipe-image">
+                <div class="recipe-details">
+                    <h3><a href="recipe-Nacho Cheese Beef Wrap.html">Nacho Cheese Beef Wrap</a></h3>
+                    <p>A Tex-Mex favorite, featuring seasoned beef, melty nacho cheese, crunchy tortilla chips, and fresh toppings, all wrapped in a soft tortilla.</p>
+                </div>
+            </div>
+
+            <div class="recipe-card" data-category="dessert western-cuisine">
+                <img src="pic/Tiramisu.jpg" alt="Tiramisu" class="recipe-image">
+                <div class="recipe-details">
+                    <h3><a href="recipe-Tiramisu.html">Tiramisu</a></h3>
+                    <p>A luxurious Italian dessert with layers of mascarpone, coffee-soaked ladyfingers, and a dusting of cocoa.</p>
+                </div>
+            </div>
+
+            <div class="recipe-card" data-category="main-dish chinese-cuisine">
+                <img src="pic/Kung Pao Chicken.jpg" alt="Kung Pao Chicken" class="recipe-image">
+                <div class="recipe-details">
+                    <h3><a href="recipe-Kung Pao Chicken.html">Kung Pao Chicken</a></h3>
+                    <p>A spicy and savory Sichuan dish, combining tender chicken, crunchy peanuts, and dried chilies in a rich sauce.</p>
+                </div>
+            </div>
+
+            <div class="recipe-card" data-category="dessert chinese-cuisine">
+                <img src="pic/Mango Sago.jpg" alt="Mango Sago" class="recipe-image">
+                <div class="recipe-details">
+                    <h3><a href="recipe-Mango Sago.html">Mango Sago</a></h3>
+                    <p>A refreshing Chinese dessert blending mango puree, coconut milk, and chewy sago pearls for a tropical treat.</p>
                 </div>
             </div>
         </section>
     </main>
+
+    <script>
+        // JavaScript for filtering recipes
+        const categorySelect = document.getElementById('category-select');
+        const recipeCards = document.querySelectorAll('.recipe-card');
+
+        categorySelect.addEventListener('change', (event) => {
+            const selectedCategory = event.target.value;
+
+            recipeCards.forEach((card) => {
+                const categories = card.getAttribute('data-category').split(' ');
+
+                if (selectedCategory === 'all' || categories.includes(selectedCategory)) {
+                    card.style.display = 'flex'; // Show matching recipes
+                } else {
+                    card.style.display = 'none'; // Hide non-matching recipes
+                }
+            });
+        });
+    </script>
 </body>
 </html>
