--- a/index.html
+++ b/index.html
@@ -3,49 +3,64 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Homepage</title>
+    <title>Delicious Recipes</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header>
-        <h1>Delicious Recipes</h1>
+        <h1>Welcome to SkyeLight Dining!</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="recipes.html">Recipes</a>
-            <a href="contact.html">Contact</a>
+            <a href="index.html" aria-label="Go to homepage">Home</a>
+            <a href="recipes.html" aria-label="View all recipes">Recipes</a>
+            <a href="contact.html" aria-label="Contact us">Contact</a>
         </nav>
     </header>
 
+    <!-- Main Content -->
     <main>
-        <section class="featured-recipes">
-            <h2>Featured Recipes</h2>
-            <div class="recipe-card">
-                <img src="pic/Spaghetti Carbonara.png" alt="Spaghetti Carbonara" class="recipe-image">
-                <div class="recipe-details">
-                  <h3><a href="recipe-Spaghetti Carbonara.html">Spaghetti Carbonara</a></h3>
-                  <p>A classic Italian pasta dish with creamy sauce and crispy pancetta.</p>
-                </div>
-              </div>
+        <h2>Featured Recipes</h2>
 
-            <div class="recipe-card">
-                <img src="pic/Nacho Cheese Beef Wrap.png" alt="Nacho Cheese Beef Wrap" class="recipe-image">
-                <div class="recipe-details">
-                    <h3><a href="recipe-Nacho Cheese Beef Wrap.html">Nacho Cheese Beef Wrap</a></h3>
-                    <p>A Tex-Mex favorite, featuring seasoned beef, melty nacho cheese, crunchy tortilla chips, and fresh toppings, all wrapped in a soft tortilla.</p>
-                </div>
+        <!-- Recipe Card 1 -->
+        <div class="recipe-card">
+            <img src="pic/Spaghetti Carbonara.png" 
+                 alt="A plate of Spaghetti Carbonara with creamy sauce and pancetta" 
+                 class="recipe-image">
+            <div class="recipe-details">
+                <h3><a href="recipe-Spaghetti Carbonara.html">Spaghetti Carbonara</a></h3>
+                <p>A classic Italian pasta dish with creamy sauce and crispy pancetta.</p>
             </div>
+        </div>
 
-            <div class="recipe-card">
-                <img src="pic/Tiramisu.jpg" alt="Tiramisu" class="recipe-image">
-                <div class="recipe-details">
-                    <h3><a href="recipe-Tiramisu.html">Tiramisu</a></h3>
-                    <p>A luxurious Italian dessert with layers of mascarpone, coffee-soaked ladyfingers, and a dusting of cocoa.</p>
-                </div>
+        <!-- Recipe Card 2 -->
+        <div class="recipe-card">
+            <img src="pic/Nacho Cheese Beef Wrap.png" 
+                 alt="Nacho Cheese Beef Wrap filled with beef, melted cheese, and vegetables" 
+                 class="recipe-image">
+            <div class="recipe-details">
+                <h3><a href="recipe-Nacho Cheese Beef Wrap.html">Nacho Cheese Beef Wrap</a></h3>
+                <p>A Tex-Mex favorite with seasoned beef, melted cheese, crunchy tortilla chips, and fresh toppings.</p>
             </div>
+        </div>
 
-        </section>
+        <!-- Recipe Card 3 -->
+        <div class="recipe-card">
+            <img src="pic/Tiramisu.jpg" 
+                 alt="A slice of Tiramisu layered with mascarpone and cocoa dusting" 
+                 class="recipe-image">
+            <div class="recipe-details">
+                <h3><a href="recipe-Tiramisu.html">Tiramisu</a></h3>
+                <p>A luxurious Italian dessert with layers of mascarpone, coffee-soaked ladyfingers, and cocoa powder.</p>
+            </div>
+        </div>
     </main>
 
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Delicious Recipes. All rights reserved.</p>
+    </footer>
+
+    <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
 </html>
