--- a/recipe-Kung Pao Chicken.html
+++ b/recipe-Kung Pao Chicken.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Kung Pao Chicken</h1>
         <nav>
+            <!-- Go Back Icon -->
+            <a href="javascript:history.back()" aria-label="Go Back" title="Go Back">⬅</a>
             <a href="index.html">Home</a>
             <a href="recipes.html">Recipes</a>
             <a href="contact.html">Contact</a>
@@ -17,47 +18,20 @@
     </header>
 
     <main>
-        <section class="recipe-detail">
-            <h2>Ingredients</h2>
-            <ul>
-                <li>Chicken breast: 300g</li>
-                <li>Dried red chilies: 6</li>
-                <li>Garlic: 3 cloves, minced</li>
-                <li>Ginger: 1 small piece, minced</li>
-                <li>Peanuts: 50g</li>
-                <li>Green onions: 3 stalks, chopped</li>
-                <li>Soy sauce: 3 tbsp</li>
-                <li>Hoisin sauce: 1 tbsp</li>
-                <li>Vinegar: 1 tbsp</li>
-                <li>Sugar: 1 tsp</li>
-                <li>Cornstarch: 1 tbsp</li>
-                <li>Water: 2 tbsp</li>
-            </ul>
-
-            <h2>Instructions</h2>
-            <ol>
-                <li>Cut the chicken into bite-sized cubes and marinate with 1 tbsp soy sauce and cornstarch for 15 minutes.</li>
-                <li>Heat oil in a wok and stir-fry dried red chilies until aromatic.</li>
-                <li>Add chicken and cook until lightly browned.</li>
-                <li>Add garlic, ginger, and green onions, stir-frying for a minute.</li>
-                <li>Mix soy sauce, hoisin sauce, vinegar, sugar, and water in a bowl, and pour into the wok.</li>
-                <li>Add peanuts and stir well to coat everything in the sauce.</li>
-                <li>Serve hot with steamed rice.</li>
-            </ol>
-        </section>
-
-        <!-- Comments Section -->
-        <section class="comments-section">
-            <h2>Comments</h2>
-            <ul id="comments-list"></ul>
-            <form id="comment-form">
-                <label for="comment-input">Add a comment:</label>
-                <textarea id="comment-input" rows="4" class="input-style" required></textarea>
-                <button type="submit" class="button">Post Comment</button>
-            </form>
-        </section>
+        <h2>Kung Pao Chicken</h2>
+        <ul>
+            <li>Chicken breast: 300g</li>
+            <li>Dried red chilies: 6</li>
+            <li>Garlic: 3 cloves, minced</li>
+            <li>Ginger: 1 small piece, minced</li>
+            <li>Peanuts: 50g</li>
+        </ul>
+        <ol>
+            <li>Cut chicken into cubes and marinate with soy sauce and cornstarch.</li>
+            <li>Heat oil, stir-fry chilies, then add chicken.</li>
+            <li>Stir-fry garlic, ginger, green onions, and sauce mixture.</li>
+            <li>Add peanuts and serve hot.</li>
+        </ol>
     </main>
-
-    <script src="script.js"></script>
 </body>
 </html>
