--- a/recipes.html
+++ b/recipes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>All Recipes</h1>
+        <h1>Welcome to SkyeLight Dining!</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="recipes.html" aria-current="page">Recipes</a>
